--- a/1. Intro.md
+++ b/1. Intro.md
@@ -68,4 +68,4 @@ La JVM conosce il tipo di ogni oggetto e a partire da questo fa il dispatching d
 ## Duck typing
 In Python non viene controllato il tipo (la classe degli oggetti), ma solo che il metodo esiste: _se cammina e starnazza come una papera allora è una papera_.
 
-Ogni oggetto mantiene i riferimenti ai metodi che si porta in pancia.c
+Ogni oggetto mantiene i riferimenti ai metodi che si porta in pancia.
