puntualizzazione appunti precedenti

--- a/2. Strutture dati di base.md
+++ b/2. Strutture dati di base.md
@@ -8,3 +8,26 @@ Le tuple sono immutabili, non supportano l'assegnamento
 # Set
 Identificati da graffe: `{}`
 Costruttore: `set((1, 1, 2, 3)) -> {1, 2, 3}`
+
+# Iterable vs iterator
+Gli oggetti iterabili, chiamati *iterable*, sono oggetti che consentono ti ottenere un *iteratore* mediante il metodo `__iter__()` o attraverso il built-in `iter(...)`. Ad ogni invocazione di una delle due funzioni viene restituito un iteratore diverso, che parte dalla testa della sequenza iterabile.
+
+Gli iteratori espongono l'interfaccia (in senso lasco, come visto Python usa duck typing per determinare il tipo degli oggetti):
+- `__iter__()` -> Torna self
+- `__next__()` -> Torna il prossimo elemento della sequenza
+
+```python
+l = [1, 2, 3, 4]
+iter(l)
+iter(l)
+iter(l)
+# Iteratori diversi
+
+i = iter(l)
+i.__iter__()
+i.__next__()  # 1
+i.__iter__()
+i.__next__()  # 2
+i.__iter__()
+# Stesso valore
+```
