--- a/3. Funzioni.md
+++ b/3. Funzioni.md
@@ -72,3 +72,8 @@ Logica lazy
 l = [x**2 for x in l]  # Torna una lista -> memoria allocata a priori
 g = (x**2 for x in l)  # Torna un generatore -> generazione lazy
 ```
+
+## Set comprehension
+```python
+s = {x**2 for x in l}  # Torna una lista -> memoria allocata a priori
+```
