fine recupero appunti

--- a/3. Funzioni.md
+++ b/3. Funzioni.md
@@ -1,4 +1,12 @@
 # Definizione
+## Passaggio degli argomenti
+Il modello di passaggio degli argomenti in Python è *pass by object reference*
+Il riferimento all'oggetto è passato per copia.
+
+Corollario:
+- le modifiche a tipi mutabili vengono propagate all'esterno della funzione (eg. liste)
+- le modifiche a tipi immutabili non vengono propagate, in quanto si riassegna un valore alla variabile contenente il riferimento, un operazione che non ha conseguenze all'esterno dalla funzione (l'oggetto originale rimane infatti immutato)
+
 ## Funzioni variadiche
 ```python
 def funzione(*args, **kwargs):
@@ -53,14 +61,14 @@ def print_msg(msg):
 	return printer
 ```
 
-## Lambda
+# Lambda
 ```python
 map(lambda x: x**2, l)
 ```
 
 Sono funzioni anonime inline.
 
-## Generatori
+# Generatori
 Attraverso i generatori è possibile scrivere funzioni iterabili, ovvero funzioni che ogni volta chiamate generano un nuovo valore.
 
 Si usa la parola chiave `yield` -> mette in pausa l'esecuzione e ritorna un oggetto conforme a `__iter__`, `__next__`
@@ -77,3 +85,100 @@ g = (x**2 for x in l)  # Torna un generatore -> generazione lazy
 ```python
 s = {x**2 for x in l}  # Torna una lista -> memoria allocata a priori
 ```
+
+# Scope
+Scope concentrico: parto dallo scope più locale verso quello globale
+
+>**Local scope**: insieme delle entità definite nel blocco di codice in cui mi trovo
+>**Enclosing scope**: insieme delle entità catturate da una closure
+>**Global scope**: oggetti definiti nel codice, senza blocchi circostanti, in nessuna funzione
+>**Built-in**: entità sempre disponibili, messe a disposizione dall'interprete
+
+Ordine risoluzione: $local \to enclosing \to global \to built-in$
+
+## Global keyword
+>**Shadowing**: definizione di un simbolo in un blocco interno, con lo stesso nome di uno definito più esternamente. Supportato da Python.
+
+La parola chiave `global` modifica l'ordine di risoluzione, forzando ad interpretare una variabile come globale.
+
+Esempio utilizzo:
+```python
+foo = "foo"
+
+def f():
+	foo = "bar"
+	print(foo) # bar
+
+f()
+print(foo) # foo
+```
+
+In questo caso la modifica della variabile *foo* fatta all'interno della funzione si riferisce alla variabile locale. Per modificare la variabile globale:
+```python
+foo = "foo"
+
+def f():
+	global foo
+	foo = "bar"
+	print(foo) # bar
+
+f()
+print(foo) # bar
+```
+# Decoratori
+> Un decoratore è una funzione che prende in ingresso una funzione e restituisce una funzione che la wrappa. È agnostico rispetto al numero di parametri della funzione decorata/wrappata.
+
+Introdotti dalla direttiva (simbolo) all'interprete `@`:
+```python
+def sugar(f):
+	def _():
+		print("inner sugar pre")
+		f()
+		print("inner sugar post")
+	return _
+
+@sugar
+def f():
+	print("f call")
+
+f()
+```
+
+Risultato:
+```
+inner sugar pre
+f call
+inner sugar post
+```
+
+Vediamo quindi come ogni chiamata a `f` venga sostituita con una chiamata alla funzione che la wrappa.
+
+## Con parametri
+```python
+def sugar(f):
+	def _(*args, *kwargs):
+		print("inner sugar pre")
+		f(*args, **kwargs)
+		print("inner sugar post")
+	return _
+
+@sugar
+def f(x, y, z):
+	print(f"f call {x+y+z}")
+
+f(1, 2, 3)
+```
+
+Risultato:
+```
+inner sugar pre
+f call 6
+inner sugar post
+```
+
+## Built-in decorators
+I più noti decoratori built-in sono:
+- `@classmethod` -> il primo argomento del metodo deve essere la classe
+- `@staticmethod` -> più lasco del precedente, non usa attributi di classe, viene quindi usato per etichettare gli helper methods
+- `@property` -> trasforma un metodo in un attributo. Utile per effettuare controlli con getter e setter senza la pesantezza delle chiamate a funzione
+
