fix minor typos

--- a/3. Funzioni.md
+++ b/3. Funzioni.md
@@ -28,16 +28,16 @@ f(*l)
 d = {x1: 1, x2: 2, x3: 3}
 f(**d)
 ```
-L'operatore di doppio spacchettamento passa alla funzione `f` gli argomenti contenuti nel dizionario, non tenendo conto dell'ordine, ma solo del nome della funzione.
+L'operatore di doppio spacchettamento passa alla funzione `f` gli argomenti contenuti nel dizionario, non tenendo conto dell'ordine, ma solo del nome dei parametri.
 
-> La ricorsione è supportata, #ricordati della funzione di stop.
+> La ricorsione è supportata, #ricordati della condizione di stop.
 
 ## Esercizio
 List flattening con funzione `hasattr`
 #Nota differenza tra `append` e `extend`
 
 # Funzioni di ordine superiore
-In Python le funzioni sono *first class objects/citizens* -> vengono trattate al pari di ogni altra entità (trattate le variabili). Anche le funzioni sono oggetti.
+In Python le funzioni sono *first class objects/citizens* -> variabili contenenti funzioni vengono trattate al pari di ogni altra entità. Anche le funzioni sono oggetti.
 
 ```python
 def factory_lang(l):
@@ -71,7 +71,7 @@ Sono funzioni anonime inline.
 # Generatori
 Attraverso i generatori è possibile scrivere funzioni iterabili, ovvero funzioni che ogni volta chiamate generano un nuovo valore.
 
-Si usa la parola chiave `yield` -> mette in pausa l'esecuzione e ritorna un oggetto conforme a `__iter__`, `__next__`
+Si usa la parola chiave `yield` -> mette in pausa l'esecuzione e ritorna un oggetto iterabile: conforme a `__iter__`, `__next__`
 
 Logica lazy
 
@@ -83,7 +83,7 @@ g = (x**2 for x in l)  # Torna un generatore -> generazione lazy
 
 ## Set comprehension
 ```python
-s = {x**2 for x in l}  # Torna una lista -> memoria allocata a priori
+s = {x**2 for x in l}  # Torna un set -> memoria allocata a priori
 ```
 
 # Scope
@@ -94,7 +94,7 @@ Scope concentrico: parto dallo scope più locale verso quello globale
 >**Global scope**: oggetti definiti nel codice, senza blocchi circostanti, in nessuna funzione
 >**Built-in**: entità sempre disponibili, messe a disposizione dall'interprete
 
-Ordine risoluzione: $local \to enclosing \to global \to built-in$
+Ordine risoluzione: $local \to enclosing \to global \to builtin$
 
 ## Global keyword
 >**Shadowing**: definizione di un simbolo in un blocco interno, con lo stesso nome di uno definito più esternamente. Supportato da Python.
