--- a/1. Intro.md
+++ b/1. Intro.md
@@ -22,7 +22,7 @@ Nel 1991 nasce il WWW -> emergono nuovi linguaggi, snelli rispetto ai predecesso
 La linea distintiva è labile. Esistono diverse sfumature di 
 
 ## Linguaggi statici e linguaggi dinamici
-> Un **linguaggio di programmazione statico** è un linguaggio con *tipizzazione statica*. Il tipo di variabili ed espressioni è controllato a tempo di esecuzione.
+> Un **linguaggio di programmazione statico** è un linguaggio con *tipizzazione statica*. Il tipo di variabili ed espressioni è controllato a tempo di compilazione.
 
 > Un **linguaggio di programmazione dinamico** è un linguaggio con *tipizzazione dinamica*. Il tipo di variabili ed espressioni è verificato a tempo di esecuzione; di fatto viene controllato il tipo appena prima dell'utilizzo di un'espressione.
 
@@ -32,10 +32,10 @@ I linguaggi compilati passano attraverso una fase di compilazione e ottimizzazio
 Il linguaggi interpretati traducono istruzione per istruzione in linguaggio macchina.
 
 # Caratteristiche dei linguaggi dinamici
-I linguaggi dinamici hanno capacità di *introspezione*, ovvero la proprietà di sapersi analizzare e modificare (*metaprogramming*) a runtime; anche il polimorfismo dinamico è racchiuso da questa definizione.
+I linguaggi dinamici hanno capacità di *introspezione*, ovvero la proprietà di sapersi analizzare (analizzare la struttura di oggetti e funzioni, o le loro proprietà), e la capacità di *riflessione*, ovvero la proprietà di sapersi modificare a runtime; si tratta in entrambi i casi di *metaprogramming*. Anche il polimorfismo dinamico è racchiuso da questa definizione.
 
 ## Tipizzazione
-> Linguaggi dinamicamente o staticamente tipizzati si riferiscono al MOMENTO (runtime vs compile-time) in cui i controlli di tipo vengono effettuati sulle variabili. Linguaggi fortemente e debolmente tipizzati si riferiscono (rispettivamente) alla necessità o meno di avere un tipo definito per ogni variabile;Java e Python sono fortemente tipizzati, mentre C è debolmente tipizzato, in quanto i puntatori permettono di aggirare il type system.
+> Linguaggi dinamicamente o staticamente tipizzati si riferiscono al MOMENTO (runtime vs compile-time) in cui i controlli di tipo vengono effettuati sulle variabili. Linguaggi fortemente e debolmente tipizzati si riferiscono (rispettivamente) alla necessità o meno di avere un tipo definito per ogni variabile; Java e Python sono fortemente tipizzati, mentre C è debolmente tipizzato, in quanto i puntatori permettono di aggirare il type system.
 
 ### Statica o dinamica
 #Attenzione alla differenza tra tempo di vita e ambito di visibilità (scope). Possono esistere momenti in cui la variabile è viva ma non può essere vista.
@@ -49,11 +49,20 @@ In un linguaggio dinamicamente tipizzato i controlli avvengono a runtime.
 ### Forte o debole
 > Nella **tipizzazione forte** le conversioni devono essere esplicite, strumentali a garantire operazioni solo tra tipi compatibili (coerenza delle operazioni).
 
+> Nella **tipizzazione debole** le variabili possono non avere un tipo esplicito, le conversioni sono implicite e sono consentite operazioni tra tipi incongruenti.
+
 Ad esempio il C ha tipizzazione debole dal punto di vista delle conversioni, perché permette cast impliciti, ma richiede di dichiarare il tipo delle variabili come in un linguaggio a tipizzazione forte.
 
-> Nella **tipizzazione debole** le variabili possono non avere un tipo esplicito, le conversioni sono implicite e sono consentite operazioni tra tipi incongruenti
+Python è invece considerato più fortemente tipizzato di C.
 
 #Nota Java non è completamente orientato agli oggetti. Non tutto è un oggetto: int, float, ecc. In Python tutto è un oggetto, anche gli interi.
+
+## Safe o unsafe
+>Un linguaggio adotta **tipizzazione safe** se impedisce che un cast implicito causi un crash
+
+In C sommare una stringa (puntatore a carattere) e un intero è concesso e potrebbe dare vita ad un segmentation fault, quindi non è un linguaggio che adotta tipizzazione safe.
+
+>Un linguaggio adotta **tipizzazione unsafe** se non impedisce che un cast implicito causi un crash.
 
 # Classi e oggetti
 > L'ereditarietà abilita al polimorfismo.
