--- a/10. Testing.md
+++ b/10. Testing.md
@@ -14,19 +14,23 @@ Lo unit testing va a stressare le funzioni di basso livello; a livelli intermedi
 ## Organizzazione dei test
 I test vengono organizzati in **case** e **suite**.
 
-Ogni case verifica il comportamento di una funzione con dato input, mentre una suite raccoglie tutti i test.
+Ogni **test case** verifica il comportamento di una unità contro uno o più input, mentre una suite raccoglie tutti i test.
 
 Il test runner è un componente che esegue tutti i test in oggetto e verifica che siano stati passati.
 
 # unittest
-È il modulo per fare unit-testing in Python: permette di definire test, raggrupparli in suite e lanciarli mediante il runner.
+È il modulo (framework) per fare unit-testing in Python: permette di definire test, raggrupparli in suite e lanciarli mediante il runner.
 
 Per ogni test case creiamo una classe che eredita da `unittest.TestCase`. Scritti i test, possiamo lanciarli con `unittest.main()`
 
 Il main trova tutte le classi che hanno ereditato da `TestCase` e lancia ogni metodo il cui nome include il prefisso `test`. Dentro al metodo si lancia la funzione in oggetto di testing e se ne verifica il valore di ritorno.
 
 Diverse assert sono messe a disposizione dalla classe `TestCase`:
-- `assertTrue`
+- `assertTrue`/`assertFalse`
+- `assertIs`/`assertIsNot`
+- `assertEqual`/`assertNotEqual`
+- `assertIn`/`assertNotIn`
+- `assertIsInstance`/`assertNotIsInstance`
 
 Un test può avere 3 esiti: OK se tutti i test sono superati, FAIL se li test non è passato o è stata sollevata un'`AssertionError`, ERROR se è stata lanciata un'eccezione diversa da quest'ultima.
 
