--- a/9. Debugging.md
+++ b/9. Debugging.md
@@ -84,5 +84,5 @@ if __debug__ and not <expr_test>:
 
 È sostituibile con:
 ```Python
-assert <expr_test> <expr_msg>
+assert <expr_test>, <expr_msg>
 ```
