--- a/8. Gestione della memoria.md
+++ b/8. Gestione della memoria.md
@@ -56,7 +56,7 @@ Algoritmo:
 2. tutti gli oggetti radice nel gray
 3. scelgo un oggetto dal gray set
 4. visito le reference uscenti e sposto gli oggetti man mano nel gray set
-5. Se ne trovo l'oggetto viene spostato nel black.
+5. L'oggetto viene spostato nel black.
 
 Alla fine libero la memoria di tutti gli oggetti nel white set.
 
@@ -64,7 +64,7 @@ Alla fine libero la memoria di tutti gli oggetti nel white set.
 1. **in movimento**: copio tutti gli oggetti raggiungibili in una nuova area di memoria e libero le altre. Meno frammentazione. Compatto la memoria.
 2. **non in movimento**: rilascio le zone di memoria degli oggetti non raggiungibili. Frammentazione.
 
-Avere la memoria compatta aiuta nel momento dell'allocazione, perché non va cercato uno spazio capace di ospitare l'oggetto, ma anche a livello hw grazie al caching.
+Avere la memoria compatta aiuta nel momento dell'allocazione, perché non va cercato uno spazio capace di ospitare l'oggetto, ma anche a livello hw grazie al caching (efficienta l'uso delle cache)
 
 ## Generational
 I garbage collector generazionali si basano sull'ipotesi, avvallata da studi scientifici, che gli oggetti più nuovi sia più probabile che vengano dereferenziati da lì a breve.
