--- a/8. Gestione della memoria.md
+++ b/8. Gestione della memoria.md
@@ -29,9 +29,9 @@ Possibile soluzione: introdurre un doppio contatore che conteggi i **riferimenti
 Due categorie:
 - tracing
 - generazionali
-
-Quando eseguo il GC? ogni N secondi (Java) o ogni volta che superi una soglia di memoria (Python)
 ## Tracing
+Quando eseguo il GC? ogni N secondi (Java) o ogni volta che superi una soglia di memoria (Python).
+
 Partendo dagli oggetti radice segue a cascata tutte le referenziazioni.
 
 Oggetti radici:
@@ -64,7 +64,7 @@ Alla fine libero la memoria di tutti gli oggetti nel white set.
 1. **in movimento**: copio tutti gli oggetti raggiungibili in una nuova area di memoria e libero le altre. Meno frammentazione. Compatto la memoria.
 2. **non in movimento**: rilascio le zone di memoria degli oggetti non raggiungibili. Frammentazione.
 
-Avere la memoria compatta aiuta nel momento dell'allocazione, perché non va cercato uno spazio capace di ospitare l'oggetto, ma anche a livello hw grazie al caching (efficienta l'uso delle cache)
+Avere la memoria compatta aiuta nel momento dell'allocazione, perché non va cercato uno spazio capace di ospitare l'oggetto, ma anche a livello hw grazie al caching (efficienta l'uso delle cache).
 
 ## Generational
 I garbage collector generazionali si basano sull'ipotesi, avvallata da studi scientifici, che gli oggetti più nuovi sia più probabile che vengano dereferenziati da lì a breve.
