--- a/8. Gestione della memoria.md
+++ b/8. Gestione della memoria.md
@@ -95,7 +95,7 @@ Major cycle: fatto ogni tanto -> mark and sweep
 # In Python
 Al momento si usa un approccio ibrido (Cython):
 - reference counting
-- generationa GC
+- generational GC
 
 Questo dipende da versione e interprete. Esistono diversi interpreti, scritti in linguaggi differenti:
 - Cython - C
